sql/sp_rcontext.h
@@ -71,7 +71,8 @@ public:
   static sp_rcontext *create(THD *thd,
                              const sp_pcontext *root_parsing_ctx,
                              Field *return_value_fld,
-                             bool resolve_type_refs);
+                             bool resolve_type_refs,
+                             List<Item> *args);
 
   ~sp_rcontext();
 
@@ -344,6 +345,9 @@ private:
                                   Qualified_column_ident *ref);
   bool resolve_table_rowtype_ref(THD *thd, Row_definition_list &defs,
                                            Table_ident *ref);
+  bool adjust_formal_params_to_actual_params(THD *thd,
+                                         List<Spvar_definition> &field_def_lst,
+                                         List<Item> *args);
 
   /// Create and initialize an Item-adapter (Item_field) for each SP-var field.
   ///
